--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/certificate.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/certificate.yaml
@@ -15,7 +15,7 @@ spec:
     name: neon-system-selfsigned-issuer
   secretName: webhook-server-cert
 ---
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: registry-harbor
@@ -30,14 +30,18 @@ spec:
     group: cert-manager.io
     kind: Issuer
     name: neon-acme-neon-system
-  keyAlgorithm: rsa
-  keyEncoding: pkcs1
-  keySize: 2048
-  organization:
-    - neoncluster.io
-  privateKey: {}
+  isCA: true
+  privateKey:
+    algorithm: RSA
+    encoding: PKCS1
+    size: 2048
+  subject:
+    organizations:
+      - neoncluster.io
+  privateKey:
+    rotationPolicy: Always
   renewBefore: 360h0m0s
-  secretName: {{ .Values.clusterDomain }}
+  secretName: registry-harbor-certificate
   subject: {}
   usages:
     - server auth
@@ -61,7 +65,10 @@ spec:
     group: cert-manager.io
     kind: Issuer
     name: registry-harbor-harbor-notarysigner-authentication
-  keyAlgorithm: ecdsa
+  privateKey:
+    algorithm: ecdsa
+    encoding: PKCS1
+    size: 2048
   privateKey: {}
   secretName: registry-harbor-harbor-notarysigner-authentication
   usages:
