--- a/Lib/Neon.Kube/Resources/Helm/neon-acme/templates/certificate-cluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-acme/templates/certificate-cluster.yaml
@@ -13,16 +13,18 @@ spec:
     group: cert-manager.io
     kind: ClusterIssuer
     name: neon-acme
-  keyAlgorithm: rsa
-  keyEncoding: pkcs1
-  keySize: 2048
-  organization:
-    - neoncluster.io
+  isCA: false
+  privateKey:
+    algorithm: RSA
+    encoding: PKCS1
+    size: 2048
+  subject:
+    organizations:
+      - neoncluster.io
   privateKey:
     rotationPolicy: Always
   renewBefore: 360h0m0s
   secretName: neon-cluster-certificate
-  subject: {}
   usages:
     - server auth
     - client auth
