--- a/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
+++ b/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\Neon.Kube.Hosting\Neon.Kube.Hosting.csproj" />
+    <ProjectReference Include="..\Neon.Kube.Setup\Neon.Kube.Setup.csproj" />
     <ProjectReference Include="..\Neon.Kube\Neon.Kube.csproj" />
     <ProjectReference Include="..\Neon.SSH\Neon.SSH.csproj" />
     <ProjectReference Include="..\Neon.Xunit\Neon.Xunit.csproj" />
