--- a/Lib/Neon.Kube/Resources/Helm/prometheus-operator/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/prometheus-operator/values.yaml
@@ -1548,7 +1548,7 @@ prometheus:
     minAvailable: 1
     maxUnavailable: ""
 
-  # Ingress exposes thanos sidecar outside the clsuter
+  # Ingress exposes thanos sidecar outside the cluster
   thanosIngress:
     enabled: false
 
