--- a/Lib/Neon.Kube.Google/Neon.Kube.Google.csproj
+++ b/Lib/Neon.Kube.Google/Neon.Kube.Google.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <OutputType>Library</OutputType>
     <LangVersion>latest</LangVersion>
     <Version>2.10.0-internal</Version>
