--- a/Lib/Neon.Kube/Resources/Helm/node-problem-detector/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/node-problem-detector/values.yaml
@@ -4,36 +4,59 @@ settings:
   # definitions provided within the default docker image available at /config:
   # https://github.com/kubernetes/node-problem-detector/tree/master/config
   # settings.custom_monitor_definitions -- Custom plugin monitor config files
-  custom_monitor_definitions: {}
-    # docker-monitor-filelog.json: |
-    #   {
-    #     "plugin": "filelog",
-    #     "pluginConfig": {
-    #       "timestamp": "^time=\"(\\S*)\"",
-    #       "message": "msg=\"([^\n]*)\"",
-    #       "timestampFormat": "2006-01-02T15:04:05.999999999-07:00"
-    #     },
-    #     "logPath": "/var/log/docker.log",
-    #     "lookback": "5m",
-    #     "bufferSize": 10,
-    #     "source": "docker-monitor",
-    #     "conditions": [],
-    #     "rules": [
-    #       {
-    #         "type": "temporary",
-    #         "reason": "CorruptDockerImage",
-    #         "pattern": "Error trying v2 registry: failed to register layer: rename /var/lib/docker/image/(.+) /var/lib/docker/image/(.+): directory not empty.*"
-    #       }
-    #     ]
-    #   }
+  custom_monitor_definitions:
+    crio-monitor.json: |
+      {
+        "plugin": "custom",
+        "pluginConfig": {
+          "invoke_interval": "10s",
+          "timeout": "3m",
+          "max_output_length": 80,
+          "concurrency": 1
+        },
+        "source": "health-checker",
+        "metricsReporting": true,
+        "conditions": [
+          {
+            "type": "ContainerRuntimeUnhealthy",
+            "reason": "ContainerRuntimeIsHealthy",
+            "message": "Container runtime on the node is functioning properly"
+          }
+        ],
+        "rules": [
+          {
+            "type": "permanent",
+            "condition": "ContainerRuntimeUnhealthy",
+            "reason": "ContainerdUnhealthy",
+            "path": "/home/kubernetes/bin/health-checker",
+            "args": [
+              "--component=cri",
+              "--crictl-path=/host/usr/bin/crictl",
+              "--cri-socket-path=/var/run/crio/crio.sock",
+              "--enable-repair=true",
+              "--cooldown-time=2m",
+              "--health-check-timeout=60s"
+            ],
+            "timeout": "3m"
+          }
+        ]
+      }
   # settings.log_monitors -- User-specified custom monitor definitions
   log_monitors:
     - /config/kernel-monitor.json
-    - /config/docker-monitor.json
+    - /config/systemd-monitor.json
+    - /config/abrt-adaptor.json
     # An example of activating a custom log monitor definition in
     # Node Problem Detector
     # - /custom-config/docker-monitor-filelog.json
-  custom_plugin_monitors: []
+  # settings.stats_monitors -- User-specified custom monitor definitions
+  stats_monitors:
+    - /config/net-cgroup-system-stats-monitor.json
+    - /config/system-stats-monitor.json
+  custom_plugin_monitors: 
+    - /config/health-checker-kubelet.json
+    - /config/network-problem-monitor.json
+    - /custom-config/crio-monitor.json
 
   # settings.prometheus_address -- Prometheus exporter address
   prometheus_address: 0.0.0.0
@@ -51,8 +74,9 @@ logDir:
   pod: ""
 
 image:
-  repository: k8s.gcr.io/node-problem-detector/node-problem-detector
-  tag: v0.8.10
+  repository: ghcr.io/neonkube-dev/node-problem-detector
+  tag: neonkube-0.1.0-alpha
+  #tag: v0.8.10
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -67,7 +91,7 @@ rbac:
 # hostNetwork -- Run pod on host network
 # Flag to run Node Problem Detector on the host's network. This is typically
 # not recommended, but may be useful for certain use cases.
-hostNetwork: false
+hostNetwork: true
 hostPID: false
 
 priorityClassName: ""
@@ -114,11 +138,43 @@ extraVolumes:
   - name: kmsg
     hostPath:
       path: /dev/kmsg
+  - name: machine-id
+    hostPath:
+      path: /etc/machine-id
+      type: File
+  - name: systemd
+    hostPath:
+      path: /run/systemd/system/
+      type: Directory
+  - name: dbus
+    hostPath:
+      path: /var/run/dbus/
+      type: Directory
+  - name: crio-sock
+    hostPath:
+      path: /var/run/crio/crio.sock
+      type: Socket
+  - name: noderoot
+    hostPath:
+      path: /
+      type: Directory
 
 extraVolumeMounts:
   - name: kmsg
     mountPath: /dev/kmsg
     readOnly: true
+  - mountPath: /etc/machine-id
+    name: machine-id
+    readOnly: true
+  - mountPath: /run/systemd/system
+    name: systemd
+  - mountPath: /var/run/dbus/
+    name: dbus
+    mountPropagation: Bidirectional
+  - mountPath: /var/run/crio/crio.sock
+    name: crio-sock
+  - mountPath: /host
+    name: noderoot
 
 extraContainers: []
 
